Fix overflowing choice icons

--- a/builder/scss/main/production/_builder.scss
+++ b/builder/scss/main/production/_builder.scss
@@ -901,7 +901,7 @@ article {
     .hasChoices {
         color: lighten($red, 25%);
         content: "*";
-        font-size: 24px;
+        font-size: 20px;
         font-weight: 900;
         position: absolute;
         top: 5px;
